5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1679_1879.log
== TEST (2019-04-29 12:50:46) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou"))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500
else:
	gratificacao = 100

print (horasExtras,"extras e",horasFalta,"de falta")
print ("R$",gratificacao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print (horasExtras,"extras e",horasFalta,"de falta")
NameError: name 'horasFalta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:51:21) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500
else:
	gratificacao = 100

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",gratificacao)

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:51:29) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500
else:
	gratificacao = 100

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",gratificacao)

-- EXECUTION TIME:
0.130266
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:52:31) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500
else:
	gratificacao = 100

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",round(gratificacao),2)

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:52:56) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500
else:
	gratificacao = 100

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",round(gratificacao,2))

-- EXECUTION TIME:
0.153966
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:53:00) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500
else:
	gratificacao = 100

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",round(gratificacao,2))

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:55:24) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500
elif indiceH <=:
	gratificacao = 100
else:
	gratificacao = 100

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",round(gratificacao,2))

-- ERROR:
File "XXXX", line 7
    elif indiceH <=:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:55:33) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500
elif indiceH <= 400:
	gratificacao = 100
else:
	gratificacao = 100

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",round(gratificacao,2))

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:55:41) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500
elif indiceH <= 400:
	gratificacao = 100
else:
	gratificacao = 100

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",round(gratificacao,2))

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:55:53) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500
elif indiceH <= 400:
	gratificacao = 100
else:
	gratificacao = 100

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",round(gratificacao,2))

-- EXECUTION TIME:
0.237359
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:56:15) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500
elif indiceH <= 400:
	gratificacao = 100
else:
	gratificacao = 100

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",round(gratificacao,2))

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:56:32) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500
elif indiceH <= 400:
	gratificacao = 100
else:
	gratificacao = 100

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",round(gratificacao,2))

-- EXECUTION TIME:
0.26587
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:59:52) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500
elif indiceH <= 400:
	gratificacao = 100
else:
	gratificacao = 100

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",round(gratificacao,2))

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:00:24) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500
elif indiceH <= 400:
	gratificacao = 100
else:
	gratificacao = 100

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",round(gratificacao,2))

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:01:00) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500.00
elif indiceH <= 400:
	gratificacao = 100.00
else:
	gratificacao = 100.00

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",round(gratificacao,2))

-- EXECUTION TIME:
0.156489
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:22:59) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500.00
elif indiceH <= 400:
	gratificacao = 100.00
else:
	gratificacao = 100.00

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",round(gratificacao,2))

-- EXECUTION TIME:
0.183957
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:36:59) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500.00
elif indiceH <= 400:
	gratificacao = 100.00
#else:
#	gratificacao = 100.00

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",round(gratificacao,2))

-- EXECUTION TIME:
0.192654
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:37:01) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500.00
elif indiceH <= 400:
	gratificacao = 100.00
#else:
#	gratificacao = 100.00

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",round(gratificacao,2))

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:37:13) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500.00
elif indiceH <= 400:
	gratificacao = 100.00
#else:
#	gratificacao = 100.00

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",round(gratificacao,2))

-- EXECUTION TIME:
0.151107
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:37:31) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500.00
else indiceH <= 400:
	gratificacao = 100.00
#else:
#	gratificacao = 100.00

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",round(gratificacao,2))

-- EXECUTION TIME:
0.158245
-- ERROR:
  File "/home/codebench/codes/1679/1879/main.py", line 7
    else indiceH <= 400:
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:37:38) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500.00
else indiceH <= 400:
	gratificacao = 100.00
#else:
#	gratificacao = 100.00

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",round(gratificacao,2))

-- ERROR:
File "XXXX", line 7
    else indiceH <= 400:
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:37:47) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500.00
elif indiceH <= 400:
	gratificacao = 100.00
#else:
#	gratificacao = 100.00

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",round(gratificacao,2))

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:38:01) 
-- CODE:
horasExtras = float(input("Horas extras: "))
horasFaltas = float(input("Horas que funcionario faltou: "))
indiceH = (horasExtras) - 1/4 * (horasFaltas)

if indiceH > 400:
	gratificacao = 500.00
elif indiceH <= 400:
	gratificacao = 100.00
#else:
#	gratificacao = 100.00

print (horasExtras,"extras e",horasFaltas,"de falta")
print ("R$",round(gratificacao,2))

-- EXECUTION TIME:
0.295779
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
